--- a/src/scss/_snippets.scss
+++ b/src/scss/_snippets.scss
@@ -5,7 +5,7 @@
   padding: u.main('big-pad') u.main('big-pad') u.main('med-pad')
     u.main('small-pad');
 
-  h4 {
-    margin: u.main('small-pad') 0;
+  h3 {
+    padding: 0;
   }
 }
